# HelpQmlCmake

./: CMakeLists.txt
myExe/: CMakeLists.txt  main.cpp
myExe/qml/: main.qml
myLib/: CMakeLists.txt  component.cpp  component.h  mylib_plugin.cpp  mylib_plugin.h  qml_component.cpp  qml_component.h
